Estilos - tablas - Eventos

--- a/index.html
+++ b/index.html
@@ -91,14 +91,44 @@
           </article>
         </div>
       </section>
+    <div class="title_Eventos">      
+      <h2><b>Eventos</b></h2>
+      <h3>Proximo evento: 13-02-2024 14:00</h3>
+    </div>
       <section id="eventos">
-        <h2>Eventos</h2>
         <article class="card-evento">
           <h3>Nombre Evento</h3>
-          <img src="equipo local" alt="" />
-          <h4>VS</h4>
-          <img src="equipo visitante" alt="" />
-          <p>Fecha del evento</p>
+          <div class="img_card">
+            <img src="/images/beder.jpeg" alt="" />
+            <h4>VS</h4>
+            <img src="equipo visitante" alt="" />
+          </div>
+          <p>Fecha del evento:</p>
+          <p>20-02-2024</p>
+          <button>Comprar</button>
+        </article>
+
+        <article class="card-evento">
+          <h3>Nombre Evento</h3>
+          <div>
+            <img src="/images/beder.jpeg" alt="" />
+            <h4>VS</h4>
+            <img src="equipo visitante" alt="" />
+          </div>
+          <p>Fecha del evento:</p>
+          <p>20-02-2024</p>
+          <button>Comprar</button>
+        </article>
+
+                <article class="card-evento">
+          <h3>Nombre Evento</h3>
+          <div>
+            <img src="/images/beder.jpeg" alt="" />
+            <h4>VS</h4>
+            <img src="equipo visitante" alt="" />
+          </div>
+          <p>Fecha del evento:</p>
+          <p>20-02-2024</p>
           <button>Comprar</button>
         </article>
       </section>
