Añadiendo patrociadores y palmares

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     </div>
       <section id="eventos">
         <article class="card-evento">
-          <h3>Nombre Evento</h3>
+          <h3>Estadio Banco Pichincha</h3>
           <div class="img_card">
-            <img src="/images/beder.jpeg" alt="" />
+            <img src="/images/barcelona.png" alt="" />
             <h4>VS</h4>
-            <img src="equipo visitante" alt="" />
+            <img src="images/independiente.png" alt="" />
           </div>
           <p>Fecha del evento:</p>
           <p>20-02-2024</p>
@@ -109,23 +109,23 @@
         </article>
 
         <article class="card-evento">
-          <h3>Nombre Evento</h3>
-          <div>
-            <img src="/images/beder.jpeg" alt="" />
+          <h3>Estadio Banco Guayaquil</h3>
+          <div class="img_card">
+            <img src="images/independiente.png" alt="" />
             <h4>VS</h4>
-            <img src="equipo visitante" alt="" />
+            <img src="images/emelec.png" alt="" />
           </div>
           <p>Fecha del evento:</p>
           <p>20-02-2024</p>
           <button>Comprar</button>
         </article>
 
-                <article class="card-evento">
-          <h3>Nombre Evento</h3>
-          <div>
-            <img src="/images/beder.jpeg" alt="" />
+        <article class="card-evento">
+          <h3>Estadio Rodrigo Paz Delgado</h3>
+          <div class="img_card">
+            <img src="images/liga.png" alt="" />
             <h4>VS</h4>
-            <img src="equipo visitante" alt="" />
+            <img src="images/independiente.png" alt="" />
           </div>
           <p>Fecha del evento:</p>
           <p>20-02-2024</p>
@@ -346,11 +346,60 @@
         </table>
       </section>
       <section id="palmares">
-        <h2>Palmares</h2>
-        <video src=""></video>
+        <h2 >Palmares</h2>
+        <img src="images/beder.jpeg" alt="">
+        <div class="palmares-bar">
+          <div>
+            <p>Serie A de Ecuador</p>
+            <div class="bar">2021</div>
+          </div>
+
+          <div>
+            <p>Copa de Ecuador</p>
+            <div class="bar">2022</div>
+          </div>
+
+          <div>
+            <p>Supercopa de Ecuador</p>
+            <div class="bar">2023</div>
+          </div>
+
+          <div>
+            <p>Conmebol Recopa</p>
+            <div class="bar">2023</div>
+          </div>
+
+          <div>
+            <p>Conmebol sudamericano</p>
+            <div class="bar-last">2019 - 2022</div>
+          </div>
+        </div>
+
       </section>
       <section id="patrocinadores">
         <h2>Patrocinadores</h2>
+        <div class="patrocinadores-grid">
+          <img src="images/banco-de-guayaquil.webp" alt="Patrocinador Banco Guayaquil">
+          <img src="images/ea-sports.webp" alt="Patrocinador EA Sports">
+          <img src="images/chubb.webp" alt="Patrocinador Chubb">
+          <img src="images/toyota.webp" alt="Patrocinador toyota">
+          <img src="images/marathon.webp" alt="Patrocinador marathon">
+          <img src="images/pilsener.webp" alt="Patrocinador pilsener">
+          <img src="images/ecuaweb.webp" alt="Patrocinador ecuaweb">
+          <img src="images/directv.webp" alt="Patrocinador directv">
+          <img src="images/banco-del-barrio.webp" alt="Patrocinador banco del barrio">
+          <img src="images/directvGO.webp" alt="Patrocinador directvGO">
+          <img src="images/americanxpress.webp" alt="Patrocinador americanxpress">
+          <img src="images/sporade.webp" alt="Patrocinador sporade">
+          <img src="images/kfc.webp" alt="Patrocinador kfc">
+          <img src="images/girasol.webp" alt="Patrocinador vivi girasol">
+          <img src="images/uribe.webp" alt="Patrocinador uribe">
+          <img src="images/tia.webp" alt="Patrocinador tia">
+          <img src="images/cemento.webp" alt="Patrocinador cemento selvalegre">
+          <img src="images/kaaru.webp" alt="Patrocinador kaaru">
+          <img src="images/gol.webp" alt="Patrocinador gol">
+          <img src="images/lava.webp" alt="Patrocinador lava">
+        </div>
       </section>
       <section id="ubicanos">
         <h2>Ubícanos</h2>
