Añadir texto alternativo a imagenes

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <article class="card-evento">
           <h3>Estadio Banco Pichincha</h3>
           <div class="img_card">
-            <img src="/images/barcelona.png" alt="" />
+            <img src="/images/barcelona.png" alt="Escudo del equipo de futbol Barcelona" />
             <h4>VS</h4>
-            <img src="images/independiente.png" alt="" />
+            <img src="images/independiente.png" alt="Escudo del equipo de futbol Independiente del valle"/>
           </div>
           <p>Fecha del evento:</p>
           <p>20-02-2024</p>
@@ -111,9 +111,9 @@
         <article class="card-evento">
           <h3>Estadio Banco Guayaquil</h3>
           <div class="img_card">
-            <img src="images/independiente.png" alt="" />
+            <img src="images/independiente.png" alt="Escudo del equipo de futbol Independiente del valle" />
             <h4>VS</h4>
-            <img src="images/emelec.png" alt="" />
+            <img src="images/emelec.png" alt="Escudo del equipo de futbol Emelec" />
           </div>
           <p>Fecha del evento:</p>
           <p>20-02-2024</p>
@@ -123,9 +123,9 @@
         <article class="card-evento">
           <h3>Estadio Rodrigo Paz Delgado</h3>
           <div class="img_card">
-            <img src="images/liga.png" alt="" />
+            <img src="images/liga.png" alt="Escudo del equipo de futbol Liga de Quito" />
             <h4>VS</h4>
-            <img src="images/independiente.png" alt="" />
+            <img src="images/independiente.png" alt="Escudo del equipo de futbol Independiente del valle" />
           </div>
           <p>Fecha del evento:</p>
           <p>20-02-2024</p>
@@ -347,7 +347,7 @@
       </section>
       <section id="palmares">
         <h2 >Palmares</h2>
-        <img src="images/beder.jpeg" alt="">
+        <img src="images/beder.jpeg" alt="Jugadores del Independiente del Valle festejando">
         <div class="palmares-bar">
           <div>
             <p>Serie A de Ecuador</p>
